--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
-.vscode
+Unidad 2/Ejercicio1/__pycache__/email.cpython-310.pyc
+Unidad 2/Ejercicio1/__pycache__/emailclase.cpython-310.pyc
+Unidad 2/Ejercicio1/bro.csv
+Unidad 2/Ejercicio1/pruebas.py
