--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ Unidad 2/Ejercicio1/__pycache__/email.cpython-310.pyc
 Unidad 2/Ejercicio1/__pycache__/emailclase.cpython-310.pyc
 Unidad 2/Ejercicio1/bro.csv
 Unidad 2/Ejercicio1/pruebas.py
+.gitignore
