--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-Unidad 2/Ejercicio1/__pycache__/email.cpython-310.pyc
-Unidad 2/Ejercicio1/__pycache__/emailclase.cpython-310.pyc
 Unidad 2/Ejercicio1/bro.csv
 Unidad 2/Ejercicio1/pruebas.py
-Unidad 2/Ejercicio2/__pycache__
+__pycache__/
